# hardcopy

./: pyproject.toml
docs/: components.md
docs/diagrams/: hardcopy-c4.drawio
src/hardcopy/: __init__.py
src/hardcopy/HardcoverHandler/: SPEC.md  __init__.py  client.py  scratch_diag.py  test_integration.py
